add_subdirectory(maxwell_solvers)
add_subdirectory(general_coordinate_elliptic_solvers)
add_subdirectory(poisson_solvers)
add_subdirectory(gyroaverage)
add_subdirectory(quasi_neutral_solvers)

if (MPI_ENABLED)
  add_subdirectory(poisson_solvers_parallel)
  add_subdirectory(maxwell_solvers_parallel)
  add_subdirectory(quasi_neutral_solvers_parallel)
endif (MPI_ENABLED)
